--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -5,9 +5,101 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         }
     ],
     "require": {
+        "npm-asset/codemirror": "5.65.3",
+        "npm-asset/inputmask": "5.0.7",
+        "npm-asset/intl-tel-input": "17.0.19",
+        "npm-asset/jquery.rateit": "1.1.5",
+        "npm-asset/select2": "4.0.13",
+        "npm-asset/jquery-text-counter": "0.9.0",
+        "npm-asset/timepicker": "1.14.0",
+        "npm-asset/popperjs--core": "2.11.6",
+        "npm-asset/progress-tracker": "2.0.7",
+        "bower-asset/signature-pad": "2.3.0",
+        "npm-asset/tabbyjs": "12.0.3",
+        "npm-asset/tippy.js": "6.3.7",
+        "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
+        "composer/installers": "^2.1",
+        "cu-boulder/boulder_base": "dev-main",
+        "cu-boulder/boulder_profile": "dev-main",
+        "cu-boulder/express_admin": "dev-main",
+        "cu-boulder/ucb_admin_menus": "dev-main",
+        "cu-boulder/ucb_article_author": "dev-main",
+        "cu-boulder/ucb_bootstrap_layouts": "dev-main",
+        "cu-boulder/ucb_campus_news": "dev-main",
+        "cu-boulder/ucb_ckeditor_plugins": "dev-main",
+        "cu-boulder/ucb_custom_entities": "dev-main",
+        "cu-boulder/ucb_default_content": "dev-main",
+        "cu-boulder/ucb_focal_image_enable": "dev-main",
+        "cu-boulder/ucb_migration_shortcodes": "dev-main",
+        "cu-boulder/ucb_person_title": "dev-main",
+        "cu-boulder/ucb_site_configuration": "dev-main",
+        "cu-boulder/ucb_third_party_libraries": "dev-main",
+        "cu-boulder/ucb_user_invite": "dev-main",
+        "cweagans/composer-patches": "^1.7",
+        "drupal/admin_toolbar": "^3.4",
+        "drupal/administerusersbyrole": "^3.4",
+        "drupal/aggregator": "^2.0",
+        "drupal/anchor_link": "^3.0@alpha",
+        "drupal/antibot": "^2.0",
+        "drupal/better_social_sharing_buttons": "^4.0",
+        "drupal/ckeditor5_icons": "1.x-dev@dev",
+        "drupal/ckeditor5_paste_filter": "^1.0",
+        "drupal/consumer_image_styles": "^4.0",
+        "drupal/core-composer-scaffold": "~10.2.0",
+        "drupal/core-project-message": "~10.2.0",
+        "drupal/core-recommended": "~10.2.0",
+        "drupal/devel": "^5.0",
+        "drupal/entity_embed": "^1.1",
+        "drupal/externalauth": "^2.0",
+        "drupal/features": "^3.14",
+        "drupal/field_group": "^3.1",
+        "drupal/focal_point": "^2.0",
+        "drupal/google_cse": "^4.0@alpha",
+        "drupal/google_tag": "^2.0",
+        "drupal/layout_builder_iframe_modal": "^1.3",
+        "drupal/linkit": "^6.1",
+        "drupal/media_alias_display": "^2.0",
+        "drupal/media_entity_file_replace": "^1.1",
+        "drupal/media_file_delete": "^1.3",
+        "drupal/media_library_form_element": "^2.0",
+        "drupal/menu_block": "^1.10",
+        "drupal/menu_firstchild": "^2.1",
+        "drupal/metatag": "^2.0",
+        "drupal/migrate_plus": "^6.0",
+        "drupal/migrate_tools": "^6.0",
+        "drupal/pantheon_advanced_page_cache": "^2.0",
+        "drupal/paragraphs": "^1.14",
+        "drupal/pathauto": "^1.8",
+        "drupal/redirect": "^1.8",
+        "drupal/responsive_preview": "^2.1",
+        "drupal/scheduler": "^2.0",
+        "drupal/shortcode": "^2.0",
+        "drupal/simple_sitemap": "^4.1",
+        "drupal/simplesamlphp_auth": "^4.0",
+        "drupal/smtp": "^1.0",
+        "drupal/twig_tweak": "^3.1",
+        "drupal/webform": "^6.2",
+        "drush/drush": "^12.1",
+        "pantheon-systems/drupal-integrations": "^10",
+        "pantheon-systems/upstream-management": "^1.0",
+        "simplesamlphp/simplesamlphp": "^2.1",
+        "drupal/config_update": "^2.0@alpha"
     },
-    "version": "1.0.1"
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true,
+            "simplesamlphp/composer-module-installer": true,
+            "pantheon-systems/upstream-management": true
+        }
+    }
 }
