--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -49,7 +49,7 @@
         "drupal/anchor_link": "^3.0@alpha",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_icons": "1.x-dev@dev",
+        "drupal/ckeditor5_icons": "~1.0",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
         "drupal/core-composer-scaffold": "~10.2.0",
