--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -25,7 +25,7 @@
         "npm-asset/tabbyjs": "12.0.3",
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
-        "composer/installers": "v2.2.0",
+        "composer/installers": "v2.3.0",
         "cu-boulder/boulder_base": "dev-main",
         "cu-boulder/boulder_profile": "dev-main",
         "cu-boulder/express_admin": "dev-main",
@@ -46,10 +46,10 @@
         "drupal/admin_toolbar": "3.4.2",
         "drupal/administerusersbyrole": "3.4.0",
         "drupal/aggregator": "2.2.0",
-        "drupal/anchor_link": "3.0.0-alpha2",
+        "drupal/anchor_link": "3.0.0-beta1",
         "drupal/antibot": "2.0.3",
         "drupal/better_social_sharing_buttons": "4.0.7",
-        "drupal/ckeditor5_icons": "dev-1.x",
+        "drupal/ckeditor5_icons": "1.1.1",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.8",
         "drupal/core-composer-scaffold": "10.2.7",
@@ -85,9 +85,9 @@
         "drupal/shortcode": "2.0.2",
         "drupal/simple_sitemap": "4.1.9",
         "drupal/simplesamlphp_auth": "4.0.0",
-        "drupal/smtp": "1.2.0",
+        "drupal/smtp": "1.3.0",
         "drupal/twig_tweak": "3.3.0",
-        "drupal/webform": "6.2.2",
+        "drupal/webform": "6.2.3",
         "drush/drush": "12.5.2",
         "pantheon-systems/drupal-integrations": "10.0.1",
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
@@ -95,7 +95,7 @@
         "simplesamlphp/simplesamlphp": "v2.2.2",
         "drupal/config_update": "2.0.0-alpha3",
         "asm89/stack-cors": "v2.2.0",
-        "chi-teck/drupal-code-generator": "3.6.0",
+        "chi-teck/drupal-code-generator": "3.6.1",
         "composer/semver": "3.4.0",
         "consolidation/annotated-command": "4.10.0",
         "consolidation/config": "2.1.2",
@@ -112,7 +112,7 @@
         "doctrine/deprecations": "1.1.3",
         "doctrine/event-manager": "2.0.1",
         "doctrine/lexer": "2.1.1",
-        "doctrine/persistence": "3.3.2",
+        "doctrine/persistence": "3.3.3",
         "drupal/captcha": "2.0.5",
         "drupal/consumers": "1.17.0",
         "drupal/core": "10.2.7",
@@ -163,7 +163,7 @@
         "simplesamlphp/assert": "v1.1.8",
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.2.1",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.2.2",
         "symfony/cache": "v6.4.7",
         "symfony/cache-contracts": "v3.5.0",
         "symfony/config": "v6.4.7",
@@ -184,13 +184,13 @@
         "symfony/polyfill-ctype": "v1.28.0",
         "symfony/polyfill-iconv": "v1.28.0",
         "symfony/polyfill-intl-grapheme": "v1.28.0",
-        "symfony/polyfill-intl-icu": "v1.29.0",
+        "symfony/polyfill-intl-icu": "v1.30.0",
         "symfony/polyfill-intl-idn": "v1.28.0",
         "symfony/polyfill-intl-normalizer": "v1.28.0",
         "symfony/polyfill-mbstring": "v1.28.0",
-        "symfony/polyfill-php72": "v1.29.0",
-        "symfony/polyfill-php80": "v1.29.0",
-        "symfony/polyfill-php81": "v1.29.0",
+        "symfony/polyfill-php72": "v1.30.0",
+        "symfony/polyfill-php80": "v1.30.0",
+        "symfony/polyfill-php81": "v1.30.0",
         "symfony/polyfill-php83": "v1.28.0",
         "symfony/process": "v6.4.7",
         "symfony/psr-http-message-bridge": "v6.4.7",
