--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -46,10 +46,10 @@
         "drupal/admin_toolbar": "^3.4",
         "drupal/administerusersbyrole": "^3.4",
         "drupal/aggregator": "^2.0",
-        "drupal/anchor_link": "^3.0@alpha",
+        "drupal/anchor_link": "^3.0@beta",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_bootstrap_accordion": "1.x-dev@dev",
+        "drupal/ckeditor5_bootstrap_accordion": "^1.0@RC",
         "drupal/ckeditor5_icons": "~1.0",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
@@ -62,7 +62,7 @@
         "drupal/features": "^3.14",
         "drupal/field_group": "^3.1",
         "drupal/focal_point": "^2.0",
-        "drupal/google_cse": "^4.0@alpha",
+        "drupal/google_cse": "^4.0",
         "drupal/google_tag": "^2.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/linkit": "^6.1",
