--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -49,7 +49,7 @@
         "drupal/anchor_link": "3.0.0-beta1",
         "drupal/antibot": "2.0.3",
         "drupal/better_social_sharing_buttons": "4.0.7",
-        "drupal/ckeditor5_bootstrap_accordion": "dev-1.x",
+        "drupal/ckeditor5_bootstrap_accordion": "1.0.0-rc1",
         "drupal/ckeditor5_icons": "1.1.1",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.8",
@@ -61,19 +61,19 @@
         "drupal/externalauth": "2.0.6",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.4.0",
-        "drupal/focal_point": "2.1.0",
+        "drupal/focal_point": "2.1.1",
         "drupal/google_cse": "4.0.0",
         "drupal/google_tag": "2.0.5",
         "drupal/layout_builder_iframe_modal": "1.3.0",
         "drupal/linkit": "6.1.4",
         "drupal/media_alias_display": "2.0.1",
         "drupal/media_entity_file_replace": "1.2.0",
-        "drupal/media_file_delete": "1.3.0",
+        "drupal/media_file_delete": "1.3.1",
         "drupal/media_library_form_element": "2.0.6",
         "drupal/menu_block": "1.11.0",
         "drupal/menu_firstchild": "2.1.0",
         "drupal/metatag": "2.0.0",
-        "drupal/migrate_plus": "6.0.2",
+        "drupal/migrate_plus": "6.0.3",
         "drupal/migrate_tools": "6.0.4",
         "drupal/pantheon_advanced_page_cache": "2.2.0",
         "drupal/paragraphs": "1.17.0",
@@ -88,7 +88,7 @@
         "drupal/simplesamlphp_auth": "4.0.0",
         "drupal/smtp": "1.3.0",
         "drupal/twig_tweak": "3.3.0",
-        "drupal/webform": "6.2.3",
+        "drupal/webform": "6.2.5",
         "drush/drush": "12.5.2",
         "pantheon-systems/drupal-integrations": "10.0.1",
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
@@ -97,7 +97,7 @@
         "drupal/config_update": "2.0.0-alpha3",
         "asm89/stack-cors": "v2.2.0",
         "chi-teck/drupal-code-generator": "3.6.1",
-        "composer/semver": "3.4.0",
+        "composer/semver": "3.4.2",
         "consolidation/annotated-command": "4.10.0",
         "consolidation/config": "2.1.2",
         "consolidation/filter-via-dot-access-data": "2.0.2",
@@ -131,9 +131,9 @@
         "google/recaptcha": "1.3.0",
         "grasmash/expander": "3.0.0",
         "grasmash/yaml-cli": "3.2.1",
-        "guzzlehttp/guzzle": "7.8.1",
-        "guzzlehttp/promises": "2.0.2",
-        "guzzlehttp/psr7": "2.6.2",
+        "guzzlehttp/guzzle": "7.8.2",
+        "guzzlehttp/promises": "2.0.3",
+        "guzzlehttp/psr7": "2.6.3",
         "justinrainbow/json-schema": "5.3.0",
         "laminas/laminas-escaper": "2.13.0",
         "laminas/laminas-feed": "2.22.0",
@@ -164,7 +164,7 @@
         "simplesamlphp/assert": "v1.1.9",
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.2.4",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.2.5",
         "symfony/cache": "v6.4.7",
         "symfony/cache-contracts": "v3.5.0",
         "symfony/config": "v6.4.7",
