--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -49,7 +49,7 @@
         "drupal/anchor_link": "3.0.0-beta1",
         "drupal/antibot": "2.0.3",
         "drupal/better_social_sharing_buttons": "4.0.7",
-        "drupal/ckeditor5_bootstrap_accordion": "1.0.0-rc1",
+        "drupal/ckeditor5_bootstrap_accordion": "1.0.0-rc2",
         "drupal/ckeditor5_icons": "1.1.1",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.8",
@@ -73,7 +73,7 @@
         "drupal/menu_block": "1.11.0",
         "drupal/menu_firstchild": "2.1.0",
         "drupal/metatag": "2.0.0",
-        "drupal/migrate_plus": "6.0.3",
+        "drupal/migrate_plus": "6.0.4",
         "drupal/migrate_tools": "6.0.4",
         "drupal/pantheon_advanced_page_cache": "2.2.0",
         "drupal/paragraphs": "1.17.0",
@@ -88,7 +88,7 @@
         "drupal/simplesamlphp_auth": "4.0.0",
         "drupal/smtp": "1.3.0",
         "drupal/twig_tweak": "3.3.0",
-        "drupal/webform": "6.2.5",
+        "drupal/webform": "6.2.7",
         "drush/drush": "12.5.2",
         "pantheon-systems/drupal-integrations": "10.0.1",
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
@@ -115,7 +115,7 @@
         "doctrine/lexer": "2.1.1",
         "doctrine/persistence": "3.3.3",
         "drupal/captcha": "2.0.6",
-        "drupal/consumers": "1.17.0",
+        "drupal/consumers": "1.19.0",
         "drupal/core": "10.2.7",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
@@ -125,7 +125,7 @@
         "drupal/token": "1.14.0",
         "e0ipso/shaper": "1.2.4",
         "egulias/email-validator": "4.0.2",
-        "gettext/gettext": "v5.7.0",
+        "gettext/gettext": "v5.7.1",
         "gettext/languages": "2.10.0",
         "gettext/translator": "v1.2.0",
         "google/recaptcha": "1.3.0",
@@ -139,6 +139,7 @@
         "laminas/laminas-feed": "2.22.0",
         "laminas/laminas-stdlib": "3.19.0",
         "league/container": "4.2.2",
+        "league/uri-interfaces": "7.4.1",
         "masterminds/html5": "2.8.1",
         "mck89/peast": "v1.15.4",
         "nikic/php-parser": "v5.1.0",
@@ -161,7 +162,7 @@
         "ralouphie/getallheaders": "3.0.3",
         "robrichards/xmlseclibs": "3.1.1",
         "sebastian/diff": "4.0.6",
-        "simplesamlphp/assert": "v1.1.9",
+        "simplesamlphp/assert": "v1.2.1",
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
         "simplesamlphp/simplesamlphp-assets-base": "v2.2.5",
