--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -49,7 +49,7 @@
         "drupal/anchor_link": "3.0.0-beta1",
         "drupal/antibot": "2.0.3",
         "drupal/better_social_sharing_buttons": "4.0.7",
-        "drupal/ckeditor5_bootstrap_accordion": "1.0.0-rc2",
+        "drupal/ckeditor5_bootstrap_accordion": "1.0.0",
         "drupal/ckeditor5_icons": "1.1.3",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.8",
