--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
             "file-mapping": {
                 "[project-root]/.editorconfig": false,
                 "[project-root]/pantheon.upstream.yml": false,
-                "[project-root]/.gitattributes": false
+                "[project-root]/.gitattributes": false,
+                "[web-root]/robots.txt": "config/robots.txt"
             }
         },
         "patches": {
