--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,7 +27,7 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "20250611",
+        "cu-boulder/boulder_base": "20250709",
         "cu-boulder/boulder_profile": "20250521",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
@@ -53,7 +53,7 @@
         "drupal/admin_toolbar": "3.6.1",
         "drupal/administerusersbyrole": "3.5.0",
         "drupal/aggregator": "2.2.2",
-        "drupal/anchor_link": "3.0.0-beta1",
+        "drupal/anchor_link": "3.0.3",
         "drupal/antibot": "2.0.4",
         "drupal/better_social_sharing_buttons": "4.1.0",
         "drupal/ckeditor5_paste_filter": "1.1.0",
@@ -61,29 +61,29 @@
         "drupal/core-composer-scaffold": "10.4.8",
         "drupal/core-project-message": "10.4.8",
         "drupal/core-recommended": "10.4.8",
-        "drupal/devel": "5.3.1",
+        "drupal/devel": "5.4.0",
         "drupal/entity_embed": "1.7.0",
         "drupal/entity_usage": "2.0.0-beta24",
         "drupal/externalauth": "2.0.8",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.6.0",
         "drupal/focal_point": "2.1.2",
-        "drupal/google_cse": "5.0.1",
+        "drupal/google_cse": "5.0.2",
         "drupal/google_tag": "2.0.8",
         "drupal/jsonapi_extras": "3.26.0",
-        "drupal/klaro": "3.0.5",
+        "drupal/klaro": "3.0.7",
         "drupal/layout_builder_iframe_modal": "1.3.6",
-        "drupal/linkit": "7.0.4",
+        "drupal/linkit": "7.0.6",
         "drupal/media_alias_display": "2.1.1",
         "drupal/media_entity_file_replace": "1.3.0",
         "drupal/media_file_delete": "1.3.1",
-        "drupal/media_library_form_element": "2.1.1",
+        "drupal/media_library_form_element": "2.1.2",
         "drupal/menu_block": "1.14.0",
         "drupal/menu_firstchild": "2.2.0",
         "drupal/menu_item_extras": "3.1.0",
         "drupal/metatag": "2.1.1",
         "drupal/migrate_plus": "6.0.5",
-        "drupal/migrate_tools": "6.0.5",
+        "drupal/migrate_tools": "6.1.0",
         "drupal/pantheon_advanced_page_cache": "2.3.2",
         "drupal/paragraphs": "1.19.0",
         "drupal/pathauto": "1.13.0",
@@ -102,7 +102,7 @@
         "drupal/unpublished_404": "2.0.3",
         "drupal/webform": "6.2.9",
         "drush/drush": "13.6.0",
-        "pantheon-systems/drupal-integrations": "10.0.1",
+        "pantheon-systems/drupal-integrations": "10.1.0",
         "pantheon-systems/pantheon_domain_masking": "2.1.0",
         "pantheon-systems/upstream-management": "1.0.1",
         "robrichards/xmlseclibs": "3.1.1",
@@ -112,12 +112,11 @@
         "chi-teck/drupal-code-generator": "3.6.1",
         "composer/semver": "3.4.3",
         "consolidation/annotated-command": "4.10.1",
-        "consolidation/config": "2.1.2",
+        "consolidation/config": "3.1.1",
         "consolidation/filter-via-dot-access-data": "2.0.2",
         "consolidation/log": "3.1.0",
         "consolidation/output-formatters": "4.6.0",
-        "consolidation/robo": "4.0.6",
-        "consolidation/self-update": "2.2.0",
+        "consolidation/robo": "5.1.0",
         "consolidation/site-alias": "4.1.1",
         "consolidation/site-process": "5.4.2",
         "dflydev/dot-access-data": "v3.0.3",
@@ -141,7 +140,7 @@
         "gettext/gettext": "v5.7.3",
         "gettext/languages": "2.12.1",
         "gettext/translator": "v1.2.1",
-        "google/recaptcha": "1.3.0",
+        "google/recaptcha": "1.3.1",
         "grasmash/expander": "3.0.1",
         "grasmash/yaml-cli": "3.2.1",
         "guzzlehttp/guzzle": "7.9.3",
@@ -149,9 +148,9 @@
         "guzzlehttp/psr7": "2.7.1",
         "justinrainbow/json-schema": "6.4.2",
         "laminas/laminas-escaper": "2.17.0",
-        "laminas/laminas-feed": "2.23.1",
+        "laminas/laminas-feed": "2.24.0",
         "laminas/laminas-stdlib": "3.20.0",
-        "laravel/prompts": "v0.3.5",
+        "laravel/prompts": "v0.3.6",
         "league/container": "4.2.5",
         "marc-mabe/php-enum": "v4.7.1",
         "masterminds/html5": "2.9.0",
@@ -174,33 +173,34 @@
         "psr/http-factory": "1.1.0",
         "psr/http-message": "2.0",
         "psr/log": "3.0.2",
-        "psy/psysh": "v0.12.8",
+        "psy/psysh": "v0.12.9",
         "ralouphie/getallheaders": "3.0.3",
         "sebastian/diff": "4.0.6",
-        "simplesamlphp/assert": "v1.8.1",
+        "simplesamlphp/assert": "v1.8.2",
         "simplesamlphp/composer-module-installer": "v1.4.0",
-        "simplesamlphp/saml2": "v5.0.1",
+        "simplesamlphp/composer-xmlprovider-installer": "v1.0.2",
+        "simplesamlphp/saml2": "v5.0.2",
         "simplesamlphp/saml2-legacy": "v4.18.1",
         "simplesamlphp/simplesamlphp-assets-base": "v2.3.9",
-        "simplesamlphp/xml-common": "v1.25.0",
-        "simplesamlphp/xml-security": "v1.13.2",
+        "simplesamlphp/xml-common": "v1.25.1",
+        "simplesamlphp/xml-security": "v1.13.7",
         "simplesamlphp/xml-soap": "v1.7.1",
-        "symfony/cache": "v6.4.21",
+        "symfony/cache": "v6.4.23",
         "symfony/cache-contracts": "v3.6.0",
         "symfony/config": "v6.4.22",
-        "symfony/console": "v6.4.22",
-        "symfony/dependency-injection": "v6.4.22",
+        "symfony/console": "v6.4.23",
+        "symfony/dependency-injection": "v6.4.23",
         "symfony/deprecation-contracts": "v3.5.1",
-        "symfony/error-handler": "v6.4.22",
+        "symfony/error-handler": "v6.4.23",
         "symfony/event-dispatcher": "v6.4.13",
         "symfony/event-dispatcher-contracts": "v3.5.1",
         "symfony/filesystem": "v6.4.13",
         "symfony/finder": "v6.4.17",
-        "symfony/framework-bundle": "v6.4.22",
-        "symfony/http-foundation": "v6.4.22",
-        "symfony/http-kernel": "v6.4.22",
-        "symfony/intl": "v6.4.22",
-        "symfony/mailer": "v6.4.21",
+        "symfony/framework-bundle": "v6.4.23",
+        "symfony/http-foundation": "v6.4.23",
+        "symfony/http-kernel": "v6.4.23",
+        "symfony/intl": "v6.4.23",
+        "symfony/mailer": "v6.4.23",
         "symfony/mime": "v6.4.21",
         "symfony/password-hasher": "v6.4.13",
         "symfony/polyfill-ctype": "v1.31.0",
@@ -215,17 +215,18 @@
         "symfony/process": "v6.4.20",
         "symfony/psr-http-message-bridge": "v6.4.13",
         "symfony/routing": "v6.4.22",
-        "symfony/serializer": "v6.4.22",
+        "symfony/serializer": "v6.4.23",
         "symfony/service-contracts": "v3.5.1",
         "symfony/string": "v6.4.21",
         "symfony/translation-contracts": "v3.5.1",
         "symfony/twig-bridge": "v6.4.22",
-        "symfony/validator": "v6.4.22",
-        "symfony/var-dumper": "v6.4.21",
+        "symfony/validator": "v6.4.23",
+        "symfony/var-dumper": "v6.4.23",
         "symfony/var-exporter": "v6.4.22",
-        "symfony/yaml": "v6.4.21",
+        "symfony/yaml": "v6.4.23",
         "twig/intl-extra": "v3.21.0",
         "twig/twig": "v3.19.0",
+        "vardot/ckeditor5-anchor-drupal": "1.0.3",
         "webmozart/assert": "1.11.0"
     },
     "config": {
